--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
     "name": "adventure",
     "private": true,
     "workspaces": [
-      "frontend",
-      "workers"
+        "frontend",
+        "workers"
     ],
     "scripts": {
-      "build": "make build",
-      "dev": "make dev",
-      "lint": "make lint",
-      "format": "make format",
-      "test": "make test"
+        "build": "make build",
+        "dev": "make dev",
+        "lint": "make lint",
+        "format": "make format",
+        "test": "make test"
     },
     "devDependencies": {
-      "prettier": "^3.0.0",
-      "prettier-plugin-tailwindcss": "^0.5.0",
-      "eslint": "^8.0.0",
-      "eslint-config-prettier": "^9.0.0"
+        "autoprefixer": "^10.4.21",
+        "eslint": "^9.24.0",
+        "eslint-config-prettier": "^10.1.1",
+        "postcss": "^8.5.3",
+        "prettier": "^3.5.3",
+        "prettier-plugin-tailwindcss": "^0.6.11",
+        "tailwindcss": "^4.1.3",
+        "tsx": "^4.19.3"
     }
-  }
-  
+}
