--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -3,6 +3,5 @@
   "singleQuote": true,
   "printWidth": 500,
   "tabWidth": 2,
-  "trailingComma": "es5",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "trailingComma": "es5"
 }
