--- a/workers/package.json
+++ b/workers/package.json
@@ -10,7 +10,7 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "wrangler": "^4.8.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "wrangler": "^4.15.2"
   }
 }
