--- a/workers/package.json
+++ b/workers/package.json
@@ -1,15 +1,15 @@
 {
   "name": "workers",
+  "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "wrangler dev",
     "build": "wrangler build",
-    "lint": "eslint . --ext .ts",
-    "format": "prettier --write .",
-    "test": "vitest"
+    "format": "prettier --write ."
   },
   "devDependencies": {
+    "prettier": "^3.5.3",
     "typescript": "^5.8.3",
     "wrangler": "^4.15.2"
   }
