--- a/workers/wrangler.toml
+++ b/workers/wrangler.toml
@@ -1,16 +1,14 @@
 name = "adventure-backend"
 main = "src/index.ts"
-compatibility_date = "2024-05-16"
+compatibility_date = "2025-05-16"
 
 [[durable_objects.bindings]]
 name = "LOBBY"
 class_name = "Lobby"
 
-[durable_objects]
-
 [[migrations]]
 tag = "v1"
 new_classes = ["Lobby"]
 
-[build]
-command = ""
+[vars]
+ENV = "production"
