--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,18 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Bundler",
     "jsx": "react-jsx",
     "strict": true,
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["frontend/src/*"]
+      "@/*": ["src/*"]
     },
     "skipLibCheck": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["frontend/src", "workers/src"],
+  "include": ["src", "_worker.js"],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
