--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,10 @@
 name = "adventure"
-main = "frontend/public/_worker.js"
+main = "_worker.ts"
 compatibility_date = "2025-05-16"
 compatibility_flags = ["nodejs_compat"]
 
 [site]
-bucket = "./frontend/public"
+bucket = "./public"
 
 [durable_objects]
 bindings = [
@@ -14,6 +14,3 @@ bindings = [
 [[migrations]]
 tag = "v1"
 new_classes = ["Lobby"]
-
-[build]
-command = ""
