--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,17 @@
 name = "adventure"
 main = "_worker.ts"
-compatibility_date = "2025-05-16"
-compatibility_flags = ["nodejs_compat"]
+compatibility_date = "2024-01-01"
 
 [site]
 bucket = "./public"
+
+[env.development]
+name = "adventure-dev"
+workers_dev = true
+
+[env.production]
+name = "adventure"
+workers_dev = false
 
 [durable_objects]
 bindings = [
@@ -14,3 +21,8 @@ bindings = [
 [[migrations]]
 tag = "v1"
 new_classes = ["Lobby"]
+
+[dev]
+port = 8787
+local_protocol = "http"
+inspector_port = 9229
