--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "commit": "make commit"
   },
   "dependencies": {
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/fontawesome-svg-core": "6.7.2",
+    "@fortawesome/free-brands-svg-icons": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@types/react": "19.1.4",
-    "@types/react-dom": "19.1.5",
+    "@fortawesome/react-fontawesome": "0.2.2",
+    "@tailwindcss/vite": "4.1.7",
     "clsx": "2.1.1",
     "framer-motion": "^12.12.1",
+    "hono": "4.7.10",
     "howler": "^2.2.4",
+    "jose": "6.0.11",
     "lucide-react": "0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -35,8 +37,11 @@
   "devDependencies": {
     "@cloudflare/workers-types": "4.20250517.0",
     "@types/node": "22.15.18",
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.5",
     "@vitejs/plugin-react": "4.4.1",
     "prettier": "3.5.3",
+    "tailwindcss": "4.1.7",
     "typescript": "5.8.3",
     "vite": "6.3.5",
     "wrangler": "4.15.2"
